# hypernvram

./: Dockerfile  LICENSE.txt  Makefile  build.sh  check_nvram.py  config.h  docker_build.sh  docker_inner_build_targets.sh  hc_test.c  hypercall.h  nvram.c  nvram.h  nvram_plugin.py
.github/workflows/: build.yml  tests.yml
cli/: Makefile  cli.c
include/: hypercall.h
libhook/: Cargo.toml  package.sh
libhook/.cargo/: config
libhook/src/: lib.rs
libhypernvram/: Makefile  alias.c  hypercall.h  nvram.c  nvram.h
python/: check_hc.py  nvram_plugin.py
tests/: Makefile  hc_test.c
