[package]
name = "libhook"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
lazy_static = "1.4"
ctor = "0.1"
libc = "0.2"



[lib]
name = "libhook"
#crate-type = ["staticlib"]
crate-type = ["cdylib"]
#crate-type = ["dylib"]
